--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "Media"
   ],
   "license": "MIT",
+  "type": "module",
   "commands": [
     {
       "name": "set-noise-cancellation",
@@ -135,8 +136,7 @@
         "airpods",
         "battery",
         "charge",
-        "status",
-        "airpods"
+        "status"
       ]
     }
   ],
@@ -150,8 +150,9 @@
     "@types/react": "19.0.10",
     "dotenv": "^17.2.3",
     "eslint": "^9.22.0",
+    "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "build": "ray build",
